# claude-code-telegram-gcp

./: .dockerignore  .gitignore  DOCKER_DEPLOY.md  Dockerfile  LICENSE  README.md  deploy.sh  docker-compose.simple.yml  docker-compose.yml  install.sh
bot/: README.md  pyproject.toml
bot/src/: main.py
bot/src/claude/: cli_executor.py  executor.py  sdk_executor.py
bot/src/config/: settings.py
bot/src/handlers/: message_handler.py
bot/src/security/: validator.py
bot/src/utils/: diff_image.py
config/: .env.example
docs/: GCP_DEPLOYMENT_GUIDE.md
scripts/: create-vm.sh  setup-bot.sh
