[tool.poetry]
name = "claude-telegram-bot"
version = "1.0.0"
description = "Telegram bot that runs Claude Code CLI on GCP VM"
authors = ["Claude Telegram GCP Contributors"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/stebou/claude-code-telegram-gcp"

[tool.poetry.dependencies]
python = "^3.10"
python-telegram-bot = "^20.8"
python-dotenv = "^1.0.0"
pydantic = "^2.0.0"
pydantic-settings = "^2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
black = "^23.7.0"
flake8 = "^6.1.0"
mypy = "^1.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
bot = "src.main:main"
